	-*- Indented-text -*-
	$Id$

1.37  2020-XX-XX
	- fixes to be more CPAN Testers friendly
	  - Makefile.PL exits 0 when $TERM is not set properly. [rt.cpan.org #128806]

1.36  2019-01-14
	- readline-8.0 support
	    new function
		rl_empty_keymap
		rl_set_keymap_name
		rl_check_signals
	    new variable
		history_quoting_state
	    rl_function_of_keyseq uses rl_function_of_keyseq_len to
	    support an arbitrary key sequence that may include NULs.
	- new() checks the number of arguments.
	- make 'use Term::ReadLine::Gnu' fail if $TERM is not set or
	  on a dumb terminal.  'use Term::ReadLine' uses
	  Term::ReadLine::Stub instead. [rt.cpan.org #123398]
	- Makefile.PL: checks the tinfo library for Debian.
	- add t/01test_use.t and t/02test_use.t.
	- comment out a hack for the CPAN Test on OpenBSD added on
	  TRG 1.22.
	- t/utf8_binary.t, t/utf8_text.t: skipped on Perl 5.8.

1.35  2016-11-03
	- readline-7.0 support
	    new function
		rl_clear_visible_line
		rl_tty_set_echoing
		rl_pending_signal
	    new variable
		rl_persistent_signal_handlers
	- Gnu.xs: fix a bug of rl_readline_state variable causing on a
	  big-endian, sizeof(int)==4, and sizeof(long)==8 platform
	  with the GNU Readline Library 7.0. [rt.cpan.org #118371]

1.34  2016-06-12
	- ppport.h: update from version 1.0007 to version 3.31.
	- t/utf8_text.t: fix for the fail when PERL_UNICODE environment
	  variable is set.

1.33  2016-06-10
	- Gnu.pm, t/utf8_text.t: fix version checks for perl 5.10.0.
	- t/utf8_text.t: fix the number of skip for systems which do
	  not support en_US.UTF-8 locale.
	- Gnu.pm: delete old formated 'use VERSION'

1.32  2016-06-06
	- improve UTF-8 handling
	  - UTF-8 decoding is done at the interface between Perl and
            XS.  This makes it possible for UTF-8 strings to be get
            from the GNU Readline Library functions and variables.
	  - add enableUTF8() method
	  - UTF-8 support is enabled when STDIN is in UTF-8 by the -C